Docker container for MsSql Database 🐳, BI report 📊, Sentiment analysis for twitch comments 🥲

--- a/pipeline/transform_chat.ipynb
+++ b/pipeline/transform_chat.ipynb
@@ -29,7 +29,10 @@
    "source": [
     "import findspark\n",
     "from decouple import Config, RepositoryEnv\n",
-    "import os"
+    "import nltk\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "from nltk.corpus import stopwords\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -38,12 +41,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "findspark.init()\n",
-    "findspark.add_packages('mysql:mysql-connector-java:8.0.11')\n",
+    "nltk.download('all')\n",
     "\n",
+    "findspark.init()\n",
+    "findspark.add_packages('mysql:mysql-connector-java:8.0.11')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *"
+    "from pyspark.sql.types import *\n",
+    "from pyspark.ml.feature import StopWordsRemover\n",
+    "\n",
+    "from pyspark.sql.functions import pandas_udf \n",
+    "from pyspark import Row "
    ]
   },
   {
@@ -108,10 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# db_server = '127.0.0.1:1433'\n",
-    "# db_name = 'DataAnalytics'\n",
-    "# db_user = 'KafkaConsumer'\n",
-    "# db_password = 'zipTrJ0NtoIWuGj'\n",
     "jdbc_url = f\"jdbc:sqlserver://{db_server};databaseName={db_name};user={db_user};password={db_password};encrypt=true;trustServerCertificate=true;\"\n",
     "db_table = \"Twitch.MessagesStg\"\n",
     "\n",
@@ -181,6 +193,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UDF for sentiment analysis\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "@pandas_udf('float')  \n",
+    "def sentiment_analysis(s: pd.Series) -> pd.Series:\n",
+    "  return s.apply(lambda msg: analyzer.polarity_scores(msg)['compound'])\n",
+    "\n",
+    "# Tokenize words\n",
+    "e3_df = e2_df.withColumn(\"MessageClean1\", split(lower(col(\"Message\")),' '))\n",
+    "\n",
+    "# Remove Stop Words\n",
+    "sw_remover = StopWordsRemover(stopWords=stopwords.words('spanish') + stopwords.words('english'))\n",
+    "sw_remover.setInputCols([\"MessageClean1\"]).setOutputCols([\"MessageClean2\"])\n",
+    "\n",
+    "e3_df = sw_remover.transform(e3_df).withColumn('MessageClean2', concat_ws(' ', col('MessageClean2')))\n",
+    "\n",
+    "# Get sentiment analysis score with VADER dict\n",
+    "e3_df = e3_df.withColumn('SentimentScore',sentiment_analysis(col('MessageClean2')))\n",
+    "\n",
+    "# Drop columns that are not needed\n",
+    "e3_df = e3_df.drop('MessageClean1','MessageClean2')\n",
+    "\n",
+    "e3_df.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to fix jars\n",
+    "# from sparknlp.pretrained import PretrainedPipeline \n",
+    "# pipeline = PretrainedPipeline(\"translate_es_en\", lang = \"xx\") \n",
+    "# pipeline.annotate(\"Your sentence to translate!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -195,13 +249,13 @@
    "source": [
     "output_table = 'Twitch.MessagesRef'\n",
     "\n",
-    "e2_df.write \\\n",
+    "e3_df.write \\\n",
     "  .format(\"jdbc\") \\\n",
     "  .mode(\"overwrite\") \\\n",
     "  .option(\"driver\", \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
     "  .option(\"url\", jdbc_url) \\\n",
     "  .option(\"dbtable\", output_table) \\\n",
-    "  .save()"
+    "  .save() "
    ]
   },
   {
