--- a/airflow/scripts/transform_chat.ipynb
+++ b/airflow/scripts/transform_chat.ipynb
@@ -24,10 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import findspark\n",
     "from decouple import Config, RepositoryEnv\n",
     "import nltk\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
@@ -41,10 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nltk.download('all')\n",
-    "\n",
-    "findspark.init()\n",
-    "findspark.add_packages('mysql:mysql-connector-java:8.0.11')"
+    "nltk.download('all')"
    ]
   },
   {
@@ -76,9 +78,10 @@
    "outputs": [],
    "source": [
     "# Env values\n",
-    "# ENV_PATH = os.path.join(os.path.dirname(__file__), '../.env')\n",
-    "env = Config(RepositoryEnv('../.env'))\n",
-    "db_server = env.get('DB_IP')\n",
+    "env = Config(RepositoryEnv('/usr/local/.env')) #Airflow\n",
+    "\n",
+    "# db_server = env.get('DB_IP') # Change\n",
+    "db_server = 'mssql:1433'\n",
     "db_name = env.get('DB_DATABASE')\n",
     "db_user = env.get('DB_USERNAME')\n",
     "db_password = env.get('DB_PASSWORD')"
@@ -104,11 +107,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"PySpark SQL Server Connection\") \\\n",
-    "    .getOrCreate()\n",
+    "# spark = SparkSession.builder \\\n",
+    "#     .master(\"spark://spark:7077\") \\\n",
+    "#     .appName(\"PySpark SQL Server Connection\") \\\n",
+    "#     .config('spark.driver.extraClassPath', '/opt/airflow/drivers/sqljdbc42.jar')\\\n",
+    "#     .config('spark.executor.extraClassPath', '/opt/airflow/drivers/sqljdbc42.jar')\\\n",
+    "#     .getOrCreate() #Airlfow\n",
     "\n",
-    "# .config(\"spark.jars\", \"file:///C:/spark-3.4.1-bin-hadoop3/jars/mssql-jdbc-12.6.1.jre8.jar\") \\"
+    "# spark = SparkSession.builder \\\n",
+    "#     .master(\"spark://spark:7077\") \\\n",
+    "#     .appName(\"newSparkSession\") \\\n",
+    "#     .config('spark.driver.extraClassPath', '/opt/spark/jars/sqljdbc42.jar') \\\n",
+    "#     .config('spark.executor.extraClassPath', '/opt/spark/jars/sqljdbc42.jar') \\\n",
+    "#     .getOrCreate()\n",
+    "\n",
+    "# spark = SparkSession.builder \\\n",
+    "#     .appName(\"newSparkSession\") \\\n",
+    "#     .config('spark.driver.extraClassPath', '/opt/spark/jars/sqljdbc42.jar') \\\n",
+    "#     .config('spark.executor.extraClassPath', '/opt/spark/jars/sqljdbc42.jar') \\\n",
+    "#     .getOrCreate()\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"newSparkSession\") \\\n",
+    "    .config('spark.driver.extraClassPath', '/opt/airflow/drivers/sqljdbc42.jar') \\\n",
+    "    .config('spark.executor.extraClassPath', '/opt/airflow/drivers/sqljdbc42.jar') \\\n",
+    "    .getOrCreate()"
    ]
   },
   {
@@ -128,7 +151,7 @@
     "db_table = \"Twitch.MessagesStg\"\n",
     "\n",
     "employees_df = spark.read \\\n",
-    "    .format(\"jdbc\") \\\n",
+    "    .format('jdbc') \\\n",
     "    .option(\"url\", jdbc_url) \\\n",
     "    .option(\"dbtable\", db_table) \\\n",
     "    .load()\n",
@@ -167,7 +190,7 @@
     "e1_df = e1_df.withColumn('Command', splitted_col.getItem(1))\n",
     "e1_df = e1_df.withColumn('Channel', regexp_replace(splitted_col.getItem(2),'#',''))\n",
     "e1_df = e1_df.withColumn('MsgResponseMeta', concat_ws(' ',splitted_col.getItem(0),splitted_col.getItem(1),splitted_col.getItem(2),lit(':'))) # Aux\n",
-    "e1_df = e1_df.withColumn('Message', regexp_replace(col('MsgResponse'),col('MsgResponseMeta'),' '))\n",
+    "e1_df = e1_df.withColumn('Message', expr(\"regexp_replace(MsgResponse,MsgResponseMeta,' ')\"))\n",
     "\n",
     "# e1_df = e1_df.withColumn('Tag', regexp_extract(col('Message'), '@(.*) ', 1))\n",
     "\n",
@@ -200,9 +223,9 @@
    "source": [
     "# UDF for sentiment analysis\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
-    "@pandas_udf('float')  \n",
+    "@pandas_udf('float')\n",
     "def sentiment_analysis(s: pd.Series) -> pd.Series:\n",
-    "  return s.apply(lambda msg: analyzer.polarity_scores(msg)['compound'])\n",
+    "  return s.apply(lambda msg: analyzer.polarity_scores(str(msg))['compound'])\n",
     "\n",
     "# Tokenize words\n",
     "e3_df = e2_df.withColumn(\"MessageClean1\", split(lower(col(\"Message\")),' '))\n",
@@ -214,7 +237,8 @@
     "e3_df = sw_remover.transform(e3_df).withColumn('MessageClean2', concat_ws(' ', col('MessageClean2')))\n",
     "\n",
     "# Get sentiment analysis score with VADER dict\n",
-    "e3_df = e3_df.withColumn('SentimentScore',sentiment_analysis(col('MessageClean2')))\n",
+    "e3_df = e3_df.withColumn('SentimentScore',lit(0))\n",
+    "# e3_df = e3_df.withColumn('SentimentScore',sentiment_analysis(col('MessageClean2')))\n",
     "\n",
     "# Drop columns that are not needed\n",
     "e3_df = e3_df.drop('MessageClean1','MessageClean2')\n",
@@ -277,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,5 +319,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
