--- a/airflow/scripts/transform_chat.ipynb
+++ b/airflow/scripts/transform_chat.ipynb
@@ -80,8 +80,7 @@
     "# Env values\n",
     "env = Config(RepositoryEnv('/usr/local/.env')) #Airflow\n",
     "\n",
-    "# db_server = env.get('DB_IP') # Change\n",
-    "db_server = 'mssql:1433'\n",
+    "db_server = env.get('DB_SERVER')\n",
     "db_name = env.get('DB_DATABASE')\n",
     "db_user = env.get('DB_USERNAME')\n",
     "db_password = env.get('DB_PASSWORD')"
